cmake_minimum_required(VERSION 3.0)
project(thresholdsync)
set(CMAKE_CXX_FLAGS "-pthread -std=gnu++11")
add_subdirectory(math_h)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/star-cmake")
find_package(ROOT)
if(NOT ROOT_FOUND)
	message(FATAL_ERROR "Fatal error: ROOT package not found")
endif()

include_directories(${MATH_H_INC})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${ROOT_INCLUDE_DIR})
add_executable(thresholdsync main.cpp gethist.cpp threshold_data.cpp)
target_link_libraries(thresholdsync ${ROOT_LIBRARIES})
